--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ p {
 
 /* Sfondo con immagine (domanda) */
 .bg-image {
-    background-image: url("pic/domanda_background.jpg");
+    background-image: url("domanda_background.jpg");
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -203,4 +203,5 @@ p {
         opacity: 0;
     }
 }
+
 
