--- a/style.css
+++ b/style.css
@@ -231,12 +231,14 @@ p {
 
    .success-container {
         flex-direction: column;
-        justify-content: flex-start;
+      	justify-content: center;   
+        align-items: center;  
         height: 100vh;
         width: 100%;
         padding: 30px 20px;
         box-sizing: border-box;
         gap: 15px;
+	   text-align: center;
     }
 
     .left-image {
@@ -260,6 +262,7 @@ p {
         margin: 8px 0;
     }
 }
+
 
 
 
